Prevent comment dropdown menu from hovering over top bar
Because of some z-index weirdness the comment menu could, if you
scrolled down the in right way, overlap the top toolbar. This fixes
things so that can't happen.

closes #1200
pr #1212

--- a/static/scss/navigation.scss
+++ b/static/scss/navigation.scss
@@ -13,7 +13,7 @@ $link-padding: 11px 20px 11px 19px;
   .mdc-toolbar {
     background-color: #fff;
     box-shadow: 0px 4px 6px -3px rgba(0, 0, 0, 0.2);
-    z-index: 4;
+    z-index: 40;
     position: fixed;
 
     .mdc-toolbar__row {
